--- a/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
+++ b/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
@@ -1,5 +1,23 @@
 <h1>My Suggestion</h1>
 
-<!-- <p>we analyzed you data using a top-secret algorithm and we think you should visit {{ deparmentSuggestion }}</p> -->
+<br />
+<br />
+<h2>Oh, nice! There is some pretty neat stuff in your gallery.  </h2>
 
-<p>we analyzed your data using a top-secret algorithm and we think you should visit ... </p>
+<br />
+<br />
+
+<button (click)="calculateDepartment()">Click here to find out which department you should visit</button>
+
+<br />
+<br />
+
+<h3> {{ department }}</h3>
+
+<br />
+
+<h4>Your Department Stats:</h4>
+<ul>
+  <li *ngFor="let item of mapObj | keyvalue">
+    {{item.key}}: {{item.value}}</li>
+</ul>
