--- a/FinalWithAuth/ClientApp/src/app/home/home.component.html
+++ b/FinalWithAuth/ClientApp/src/app/home/home.component.html
@@ -11,9 +11,9 @@ Just don't know where to start your visit because the Met is the largest museum 
   and then we'll tell you which galleries in the museum may be interesting to you. We know museum fatigue is a real thing,
 especially if you don't have a plan. </p>
 
-<p>To get started, please select which type of art you are most interested in seeing today:</p>
+<p>To get started, log in and select "Mappsterpiece App"</p>
 
 <br />
 <br />
 
-<app-met-app></app-met-app>
+<!-- <app-met-app></app-met-app> -->
