--- a/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
+++ b/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
@@ -4,6 +4,7 @@
   3) display a button to delete
  -->
 
+
  <h1>My Gallery</h1>
 
 <table>
@@ -14,34 +15,14 @@
     <th>Remove from My Gallery</th>
   </tr>
 
-  <!-- //** SO -->
+  <!-- Display Gallery -->
   <tr *ngFor="let item of myGalleryList">
     <td> <img src="{{ item.primaryImage }}" style="width:auto;height:125px;"> </td>
     <td> {{ item.artistDisplayName }}, {{item.title}} </td>
-    <p> {{ item.visitedObject }}</p>
+    <p> {{ item.department }}</p>
     <td></td><button (click)="onMarkAsVisited(item, item.entryId)">Mark as Visited</button>
     <td><button (click)="deleteGalleryItem(item.entryId)">Remove From My Gallery</button>
 
   </tr>
 
 </table>
-
- <!-- <h1>My Gallery</h1>
-
-<table>
-  <tr>
-    <th>Object</th>
-    <th>Object Information</th>
-    <th>I've seen that!</th>
-    <th>Remove from My Gallery</th>
-  </tr>
-
-  <tr *ngFor="let item of myGalleryList">
-    <td> <img src="{{ item.primaryImage }}" style="width:auto;height:125px;"> </td>
-    <td> {{ item.artistDisplayName }}, {{item.title}} </td>  
-    <td></td><button (click)="onMarkAsVisited()">Mark as Visited</button>
-    <td><button (click)="deleteGalleryItem(item.entryId)">Remove From My Gallery</button>
-
-  </tr>
-
-</table> -->
