--- a/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
+++ b/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
@@ -2,12 +2,12 @@
 
 <br />
 <br />
-<h2>Oh, nice! There is some pretty neat stuff in your gallery.  </h2>
+<h2>Nice! There's some pretty neat stuff in your gallery. </h2>
 
 <br />
 <br />
 
-<button (click)="calculateDepartment()">Click here to find out which department you should visit</button>
+<button class="btn-select" (click)="calculateDepartment()">Click here to find out which department you should visit</button>
 
 <br />
 <br />
