--- a/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.html
+++ b/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.html
@@ -1,6 +1,7 @@
-<br />
-<br />
 
+<div class="page">
+
+<h1>Hello!</h1>
 <h4>To get started, select the type of artwork you want to see today: </h4>
 
 <br />
@@ -14,7 +15,7 @@
 
 <!-- select medium button  -->
 <!-- <button (click)="onSelect()">select</button> -->
-<button (click)="onSelect()">Select</button>
+<button class="btn-select" (click)="onSelect()">Select</button>
 
 <br />
 <br />
@@ -36,10 +37,8 @@
 <br />
 
 <!-- like/dislike buttons -->
-<button (click)="onLike()">oOoOo</button>
-<button (click)="onDislike()">Not for me</button>
+<button class="btn-choose" (click)="onLike()">oOoOo</button>
+<button class="btn-choose" (click)="onDislike()">Not for me</button>
 
-<br />
-<br />
-<br />
-<br />
+
+</div>
