--- a/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
+++ b/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
@@ -7,21 +7,25 @@
 
  <h1>My Gallery</h1>
 
-<table>
+<!-- Display Gallery -->
+ <table class="styled-table">
+  <col style="width:30%">
+	<col style="width:35%">
+	<col style="width:20%">
+  <col style="width:15%">
   <tr>
-    <th>Object</th>
+    <!-- <th>Object</th>
     <th>Object Information</th>
-    <th>I've seen that!</th>
-    <th>Remove from My Gallery</th>
+    <th>Update</th>
+    <th>Delete</th> -->
   </tr>
 
-  <!-- Display Gallery -->
+
   <tr *ngFor="let item of myGalleryList">
-    <td> <img src="{{ item.primaryImage }}" style="width:auto;height:125px;"> </td>
-    <td> {{ item.artistDisplayName }}, {{item.title}} </td>
-    <p> {{ item.department }}</p>
-    <td></td><button (click)="onMarkAsVisited(item, item.entryId)">Mark as Visited</button>
-    <td><button (click)="deleteGalleryItem(item.entryId)">Remove From My Gallery</button>
+    <td> <img src="{{ item.primaryImage }}" style="width:auto;height:150px;"> </td>
+    <td> {{item.title}} </td>
+    <td><button class="btn-select" (click)="onMarkAsVisited(item, item.entryId)">Mark as Visited</button>
+    <td><button class="btn-select" (click)="deleteGalleryItem(item.entryId)">Remove From My Gallery</button>
 
   </tr>
 
