--- a/FinalWithAuth/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalWithAuth/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Authenicating Mappsterpiece</a>
+      <a class="navbar-brand" [routerLink]="['/']">Mappsterpiece</a>
       <button
         class="navbar-toggler"
         type="button"
