--- a/FinalWithAuth/ClientApp/src/app/home/home.component.html
+++ b/FinalWithAuth/ClientApp/src/app/home/home.component.html
@@ -1,17 +1,22 @@
 <h1>Welcome to Mappsterpiece!</h1>
-<h3>Your guide to the Metropolitan Museum of Art</h3>
-<p>Are you a tourist in NYC with only 1 hour to spare? <br />
-Work nearby and need to decompress on a lunch break? <br />
-Interested in museums, but never been to one? <br />
-Want to keep your kids engaged at the museum, but not sure how?<br />
-Just don't know where to start your visit because the Met is the largest museum in the US?
-</p>
-<p></p>
-<p>We're Mappsterpiece. We'll show you artworks, you'll let us know if you like them or not,
-  and then we'll tell you which galleries in the museum may be interesting to you. We know museum fatigue is a real thing,
-especially if you don't have a plan. </p>
+<br />
+<h3>Your guide to the Metropolitan Museum of Art, <br /> because museum fatigue is a real thing</h3>
+<br />
+<ul>
+  <li>Are you a tourist in NYC with only 1 hour to spare?</li>
+  <li>Interested in museums, but never been to one?</li>
+  <li>Want to keep your kids engaged at the museum, but not sure how?</li>
+  <li>Work nearby and need to decompress on a lunch break? </li>
+  <li>Just don't know where to start your visit?</li>
+</ul>
 
-<p>To get started, log in and select "Mappsterpiece App"</p>
+<p></p>
+<p>
+  We're Mappsterpiece. You'll browse the Met's collection and let us know if you like the artwork or not.
+  <br /> Then we'll tell you which galleries in the museum may be interesting to you.
+</p>
+
+<!-- <p>To get started, log in and select "Mappsterpiece App"</p> -->
 
 <br />
 <br />
