--- a/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
+++ b/FinalWithAuth/ClientApp/src/app/my-gallery/my-gallery.component.html
@@ -4,14 +4,13 @@
   3) display a button to delete
  -->
 
-
 <h1>My Gallery</h1>
 
 <!-- Display Gallery -->
 <table class="styled-table">
   <col style="width:30%">
-	<col style="width:35%">
-	<col style="width:20%">
+  <col style="width:35%">
+  <col style="width:20%">
   <col style="width:15%">
   <tr>
     <!-- <th>Object</th>
@@ -20,11 +19,10 @@
     <th>Delete</th> -->
   </tr>
 
-
   <tr *ngFor="let item of myGalleryList">
     <td> <img src="{{ item.primaryImage }}" style="width:auto;height:150px;"> </td>
-    <td> {{item.title}} </td>
-    <td><button class="btn-select" (click)="onMarkAsVisited(item, item.entryId)">Mark as Visited</button>
+    <td> {{item.visitedObject}} </td>
+    <td><button class="btn-select" (click)="onMarkAsVisited(item.entryId, item)">Mark as Visited</button>
     <td><button class="btn-select" (click)="deleteGalleryItem(item.entryId)">Remove From My Gallery</button>
   </tr>
 
