--- a/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.html
+++ b/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.html
@@ -1,6 +1,7 @@
 
 <div class="page">
 
+  <div>
   <h1>Hello!</h1>
   <h4>To get started, select the type of artwork you want to see today: </h4>
 
@@ -43,4 +44,5 @@
 
 
   </div>
+</div>
 </div>
