--- a/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.css
+++ b/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.css
@@ -11,3 +11,12 @@
   background-color: rgb(236, 46, 55);
   color: white;
   }
+
+  /* .page {
+    border-collapse: collapse;
+    margin: 25px 0;
+    margin-left: 50px;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+  } */
