--- a/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
+++ b/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.html
@@ -1,5 +1,7 @@
+
 <h1>My Suggestion</h1>
 
+<div class="page">
 <br />
 <br />
 
@@ -24,4 +26,5 @@
       {{item.key}}: {{item.value}}</li>
   </ul>
 
+</div>
 </div>
