--- a/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.css
+++ b/FinalWithAuth/ClientApp/src/app/met-app/met-app.component.css
@@ -1,9 +1,17 @@
-
+/* 
 .page {
   display: block;
     margin-left: auto;
-    margin-right: auto
-}
+    margin-right: auto;
+
+    border-collapse: collapse;
+    margin: 25px 0;
+     margin-left: 50px;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+} */
+
 
 .btn-choose {
   border: 2px solid black;
