--- a/FinalWithAuth/ClientApp/src/app/home/home.component.html
+++ b/FinalWithAuth/ClientApp/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <h1>Welcome to Mappsterpiece!</h1>
 <br />
-<h3>Your guide to the Metropolitan Museum of Art, <br /> because museum fatigue is a real thing</h3>
+<h3>Your guide to the Metropolitan Museum of Art, <br /> because museum fatigue is a real thing.</h3>
 <br />
 <ul>
-  <li>Are you a tourist in NYC with only 1 hour to spare?</li>
+  <li>Are you a tourist in NYC with only one hour to spare?</li>
   <li>Interested in museums, but never been to one?</li>
   <li>Want to keep your kids engaged at the museum, but not sure how?</li>
   <li>Work nearby and need to decompress on a lunch break? </li>
