--- a/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.css
+++ b/FinalWithAuth/ClientApp/src/app/department-suggestion/department-suggestion.component.css
@@ -12,11 +12,11 @@
   color: white;
   }
 
-  /* .page {
+   .page {
     border-collapse: collapse;
-    margin: 25px 0;
-    margin-left: 50px;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    padding: 50px;
+    margin: 20px;
 
-  } */
+  }
